[package]
name = "ratherLabs"
version = "0.1.0"
authors = ["matias diaz <matias.dpz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.131", features = ["derive"] }
futures = "0.3.18"
